--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,7 +13,7 @@
   %body
     #header.container_12
       .grid_12
-        %h1 Here is your new empty project!
+        %h1 A New Empty Project!
 
     #content.container_12
       .grid_8= yield
