--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
 %html.no-js{:lang => "en"}
   / <![endif]
   %head
-    %meta{:charset => "utf-8"}/
+    %meta{:charset => "utf-8"}
     / Always force latest IE rendering engine (even in intranet)
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %title ADD TITLE
